--- a/resources/sass/layouts/landing/partials/hero.scss
+++ b/resources/sass/layouts/landing/partials/hero.scss
@@ -63,7 +63,7 @@
         font-size: $xxs;
         text-align: center;
 
-        @include devices(laptop) {
+        @include devices(tablet) {
             font-size: $xs;
         }
 
